# claude-reporter

./: .gitignore  ALL_IN_ONE.sh  CHANGELOG.md  CLAUDE.md  COMPLETE_GUIDE.md  Dockerfile.tui  GDRIVE_SETUP.md  HOW_TO_PUBLISH.md  LICENSE  NPM_PUBLISH_GUIDE.md  NPM_QUICK_REF.md  PROJECT_STRUCTURE.md  PUBLISH.md  QUICK_START.md  README.md  START_HERE.md  STORAGE_OPTIONS.md  SUMMARY.md  SUPER_SIMPLE_README.md  TEST_BEFORE_PUBLISH.md  TROUBLESHOOTING.md  WHATS_NEW.md  build-tui-linux.sh  demo.sh  justfile  package.json  publish.sh  pyproject.toml  setup-git.sh  switch-storage.sh  test.js
.claude/: settings.local.json
app/: .briefcase.toml  CHANGELOG.md  Dockerfile.linux  README.md  build-linux-docker.sh  build-linux.sh  build.bat  build.sh  installer.iss  pyproject.toml
app/.briefcase/claudecodelog/dev/: venv_path
app/.claude/: settings.local.json
app/claudecodelog/: __init__.py  __main__.py  app.py  app_old.py
app/claudecodelog.dist-info/: METADATA  top_level.txt
app/claudecodelog/claude_code_log/: converter.py  models.py
app/claudecodelog/claude_code_log/templates/: transcript.html
app/resources/: icon.icns
claude_code_log/: cli.py  renderer.py  team_analytics.py  tui.py  utils.py
npm-package/: README.md  package.json
scripts/: add_licenses_to_firestore.py  drive_list_folders.gs  generate_style_guide.py  update_drive_urls.py
test/: README.md  conftest.py  snapshot_serializers.py  test_askuserquestion_rendering.py  test_command_handling.py  test_date_filtering.py  test_exitplanmode_rendering.py  test_ide_tags.py  test_integration_realistic.py  test_message_types.py  test_performance.py  test_preview_truncation.py  test_tui.py  (+12 more)
(+89 files in other folders)
